chore: bundle with tsup

--- a/apps/workshop/src/Introduction.mdx
+++ b/apps/workshop/src/Introduction.mdx
@@ -10,6 +10,13 @@ It is necessary to install both the `@gaze-ui` `react` and `tokens` packages.
 npm install --save @gaze-ui/react @gaze-ui/tokens
 ```
 
+Import the variables and base styles into your application.
+
+```js
+import "@gaze-ui/tokens/css/variables.css";
+import "@gaze-ui/react/styles.css";
+```
+
 ### Customizing
 
 Many theme properties may be customized by setting custom CSS property in the `:root` space. For example...
@@ -24,6 +31,6 @@ Many theme properties may be customized by setting custom CSS property in the `:
 
 While Gaze was built for Studio Drishti projects, it is open source and welcome to contributions.
 
-- [Code of Conduct](https://github.com/studio-drishti/gaze)
-- [Contributing Guidelines](https://github.com/studio-drishti/gaze)
-- [Local Development](https://github.com/studio-drishti/gaze)
+- [Code of Conduct](https://github.com/studio-drishti/gaze?tab=coc-ov-file)
+- [Contributing Guidelines](https://github.com/studio-drishti/gaze/blob/main/.github/CONTRIBUTING.md)
+- [Local Development](https://github.com/studio-drishti/gaze/blob/main/.github/DEVELOPMENT.md)
